--- a/pagina/prueba.html
+++ b/pagina/prueba.html
@@ -23,7 +23,7 @@
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Material Design Lite</title>
-
+    <script src="js/qrcode.js"></script>
     <script src="js/queryFirebase.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
@@ -232,8 +232,14 @@
 
                             </fieldset>
                         </form>
-                        <button type="button" onClick="submit()">daleclick</button>
+                        <button type="button" onClick="submit()">Registrarse</button>
                         <p id="parrafo"></p>
+                        <div data-role="content">
+                    
+                    <div id="qr">
+                        
+                    </div>
+                </div>
                     </center>
                 </div>
             </div>
